--- a/Correção Sped 1.0/nbproject/private/private.properties
+++ b/Correção Sped 1.0/nbproject/private/private.properties
@@ -9,4 +9,4 @@ javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Browser Default do Sistema>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=C:\\Users\\suporte06\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Masterkaos\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
